tests/fixtures/sample-output/failing/src/barrel-wildcard.ts
/* Fixture: wildcard re-exports (should fail no-wildcard-exports check) */

export * from './helpers.js';
export * from './types.js';
